--- a/06 - Neighbors Lab.ipynb
+++ b/06 - Neighbors Lab.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ed5f2c16164fa13b7c5b72b205e1dc0eb8f22b632aedd6faed53da0f376cb33a"
+  "signature": "sha256:65281dcdc68b3669841dbcaf58e47d85d447f2dd234b7a7a2be0aa5226abe59c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -77,7 +77,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Various variables we'll need to set intially.\n",
+      "# Various variables we'll need to set initially.\n",
       "n_neighbors = range(1, 51, 2) \n",
       "# Skipping two; we need it to be odd.\n",
       "# Choice of K. Number of neighbors. Usually want it to be an odd number to avoid the possibility of a tie."
