--- a/15-BoostedTrees.ipynb
+++ b/15-BoostedTrees.ipynb
@@ -127,6 +127,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# n_estimators is the number of trees\n",
+    "# max_depth one of the ways you can prevent decision tree from overfitting\n",
+    "# loss determines how you're going to fit the next iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
