--- a/10-LogitLab-Solutions-Copy1.ipynb
+++ b/10-LogitLab-Solutions-Copy1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -200,6 +200,32 @@
        "      <td> 1</td>\n",
        "      <td> 1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td> 4</td>\n",
+       "      <td> 1</td>\n",
+       "      <td> 2</td>\n",
+       "      <td> 2.00</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.00</td>\n",
+       "      <td> 1</td>\n",
+       "      <td> 1</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td> 5</td>\n",
+       "      <td> 1</td>\n",
+       "      <td> 2</td>\n",
+       "      <td> 2.00</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.00</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 1</td>\n",
+       "      <td> 1</td>\n",
+       "      <td> 1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -209,21 +235,25 @@
        "0   1        1           2      1.58      1        0.42       1         1   \n",
        "1   2        1           2      1.15      1        0.85       1         1   \n",
        "2   3        1           3      2.25      1        0.75       0         1   \n",
+       "3   4        1           2      2.00      0        0.00       1         1   \n",
+       "4   5        1           2      2.00      0        0.00       0         1   \n",
        "\n",
        "   repeated?  repeated_bundle?  \n",
        "0          1                 1  \n",
        "1          0                 1  \n",
-       "2          1                 1  "
+       "2          1                 1  \n",
+       "3          0                 0  \n",
+       "4          1                 1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mdata = pd.read_csv('./data/milkdata.csv')\n",
-    "mdata.head(3)"
+    "mdata.head(5)"
    ]
   },
   {
@@ -235,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -399,7 +429,7 @@
        "repeated_bundle?    1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -425,10 +455,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x173a19b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x109458d90>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -527,7 +557,7 @@
        "qSgjLUlSUUZakqSijLQkSUX9P8Q559rBCYjzAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x40ed048>"
+       "<matplotlib.figure.Figure at 0x1093d9b50>"
       ]
      },
      "metadata": {},
